# cobs.rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README  README.md  justfile
.github/workflows/: ci.yml
benches/: main.rs
src/: dec.rs  enc.rs  lib.rs
tests/: test.rs  tests.rs
