[package]
name = "cobs"
version = "0.5.0"
authors = [
  "Allen Welkie <>",
  "James Munns <james@onevariable.com>",
  "Robin Mueller <robin.mueller.m@gmail.com>"
]
license = "MIT OR Apache-2.0"
description = """
    This is an implementation of the Consistent Overhead Byte Stuffing (COBS) algorithm.
    COBS is an algorithm for transforming a message into an encoding where a specific value
    (the "sentinel" value) is not used. This value can then be used to mark frame boundaries
    in a serial communication channel. """
repository = "https://github.com/jamesmunns/cobs.rs"
keywords = ["consistent", "overhead", "byte", "stuffing", "encoding"]
edition = "2024"
rust-version = "1.87"

[features]
default = ["std"]
std = ["alloc", "thiserror/std"]
alloc = []
# Legacy feature for backwards compatibility
use_std = ["std"]

[dependencies]
thiserror = { version = "2", default-features = false }
defmt = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
heapless = "0.9"

[dev-dependencies]
quickcheck = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]
